<resources>
    <string name="app_name">HealthChain</string>
    <string name="chain">Chain</string>
    <string name="health">Health</string>
    <string name="title_home">Principal</string>
    <string name="title_medical_records">Historial Médico</string>
    <string name="title_nfc">NFC</string>
    <string name="title_patient_data">Mis Datos</string>
    <string name="title_paramedic_data">Información de emergencia</string>
    <string name="title_settings">Configuración</string>
    <string name="save">Guardar</string>
    <string name="text_add">Agregar</string>

    <!-- Shared Preferences -->
    <string name="preferences_key">com.itesm.healthchain.preferences</string>
    <string name="token_key">authentication_token</string>
    <string name="role_key">user_role</string>
    <string name="name_key">user_name</string>
    <string name="email_key">user_email</string>

    <!-- Log In / Register Activity-->
    <string name="email">E-mail</string>
    <string name="pwd">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="full_name">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="pin">Pin</string>
    <string name="create_emergency_instruction">Llena tu perfil de emergencia</string>
    <string name="hint_name">José Hernández</string>
    <string name="hint_name2">María Pérez</string>
    <string name="hint_birthdate">dd/mm/yyyy</string>
    <string name="hint_blood">A+</string>
    <string name="hint_weight">75.0</string>
    <string name="hint_weightUnit">kg</string>
    <string name="hint_height">175</string>
    <string name="hint_heightUnit">cm</string>
    <string name="hint_hospital">Hospital ABC</string>
    <string name="hint_ailments">Hipertensión, diabetes, etc.</string>
    <string name="hint_allergies">Penicilina, mariscos, etc.</string>
    <string name="hint_relationship">Madre</string>
    <string name="hint_phone">5512345678</string>
    <string name="confirm_pwd">Confirmar Contraseña</string>
    <string name="login_error">Usuario y contraseña no válidos.</string>
    <string name="register_error">Error al registrar usuario.</string>
    <string name="role_error">Error al iniciar sesión</string>
    <string name="update_info_error">Error al actualizar la información</string>

    <string name="logout_error">Error al cerrar sesión.</string>

    <!-- Doctor Main Fragment -->
    <string name="text_home">Principal</string>
    <string name="text_patients">Mis pacientes</string>
    <string name="text_new_patient">Agregar nuevo paciente</string>

    <!-- Paramedic -->
    <string name="emergency_info">Información Paciente</string>

    <!-- NFC Fragment -->
    <string name="nfc_instructions">Acerque la tarjeta NFC al teléfono</string>
    <string name="no_nfc">No se detecta la tarjeta NFC</string>
    <string name="nfc_write_success">Se escribió la información correctamente en la tarjeta</string>
    <string name="nfc_write_error">Error al escribir. Acerca la tarjeta al dispositivo</string>

    <!-- Personal Data Fragment -->
    <string name="label_name">Nombre</string>
    <string name="label_age">Fecha de nacimiento</string>
    <string name="label_blood">Tipo de sangre</string>
    <string name="label_weight">Peso</string>
    <string name="label_height">Altura</string>
    <string name="title_contacto">Contacto de emergencia</string>
    <string name="label_hospital">Hospital de preferencia</string>
    <string name="label_ailments">Condiciones médicas conocidas</string>
    <string name="label_allergies">Alergias conocidas</string>
    <string name="label_birthdate">Fecha de nacimiento</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_relationship">Parentesco</string>
    <string name="content_phone">Llamar contacto de emergencia</string>

    <!-- Personal Edit Fragment -->
    <string name="title_edit">Editar datos personales</string>
    <string name="personal_edit_error">Hubo un error al actualizar tus datos, vuelve a intentarlo.</string>

    <!-- Main Records Fragment -->
    <string name="label_prescriptions">Recetas Médicas</string>
    <string name="label_records">Historial Médico</string>
    <string name="label_documents">Documentos</string>
    <string name="label_doctors">Mis Doctores</string>

    <!-- Medical Records Fragment -->
    <string name="label_sex">Sexo</string>
    <string name="label_ta">T.A.</string>
    <string name="label_fc">F.C.</string>
    <string name="label_fr">F.R.</string>
    <string name="label_temp">TEMP</string>
    <string name="label_bmi">I.M.C.</string>
    <string name="label_observations">Observaciones</string>
    <string name="label_diagnosis">Diagnóstico</string>
    <string name="label_prescription">Receta Médica</string>
    <string name="header_dose">Dosis</string>
    <string name="header_date">Fecha límite</string>
    <string name="empty_records">Tu historial está vacío</string>

    <!-- Prescription Header -->
    <string name="prescription_name">Nombre</string>
    <string name="prescription_dose">Dosis</string>
    <string name="prescription_date">Fecha Límite</string>

    <string name="empty_prescriptions">Aún no te han recetado ningún medicamento</string>

    <!-- Doctors Fragment -->
    <string name="title_doctors">Profesionales consultados </string>
    <string name="delete_doctor">Restringir información a este profesional</string>
    <string name="empty_doctors">No tienes agregado a ningún profesional</string>
    <string name="delete_doctor_fail">Error al eliminar al doctor, intenta de nuevo.</string>

    <!-- Patients Fragment -->
    <string name="title_patients">Pacientes atendidos </string>
    <string name="empty_patients">No tienes agregado a ningún paciente</string>

    <!-- Patients Detail Menu -->
    <string name="text_patient_info">Información general del paciente</string>
    <string name="text_new_record_entry">Crear nueva consulta</string>
    <string name="title_patients_detail_menu">Información médica del paciente</string>
    <string name="error_update_record">Error al actualizar el historial médico, vuelve a intentar.</string>

    <!-- Settings Fragment -->
    <string name="edit_profile">Editar Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="about">Sobre HealthChain</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_changeSuccess">Cambio exitoso</string>
    <string name="password_changeFail">No se pudo hacer el cambio</string>

    <!-- About Fragment -->
    <string name="about_text">Esta aplicación fue desarrollada por alumnos del Instituto Tecnológico
        y de Estudios Superiores de Monterrey para la materia de Proyecto integrador para el
        desarrollo de soluciones empresariales impartida por el profesor Rafael Lozano Espinosa. \n
        \n David Gómez Chiu		        A01334574
        \n Diogo Burnay Rojas 			A01334970
        \n José Alberto Jurado Hdez.	A01336656
        \n Yoali Sotomayor Baqueiro 	A01650536
        \n Kenyiro Tsuru González 		A01651095 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asunto">Asunto:</string>
    <string name="para">Para:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar">Enviar</string>

</resources>
