<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_emergency_instruction"
        android:layout_width="278dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:text="@string/create_emergency_instruction"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="182dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_emergency_instruction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="8dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_name"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_name"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_birthdate"
                android:layout_width="176dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_birthdate"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_birthdate"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_blood"
                android:layout_width="79dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_blood"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_blood"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_weight"
                android:layout_width="16dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_weight"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_weight"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_weight"
                android:importantForAutofill="no"
                android:inputType="number|text" />

            <TextView
                android:id="@+id/label_weightUnit"
                android:layout_width="16dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/hint_weightUnit"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/label_height"
                android:layout_width="16dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_height"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_height"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_height"
                android:importantForAutofill="no"
                android:inputType="number|text" />

            <TextView
                android:id="@+id/label_heightUnit"
                android:layout_width="16dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/hint_heightUnit"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_hospital"
                android:layout_width="75dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:text="@string/label_hospital"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_hospital"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_ailments"
                android:layout_width="75dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:text="@string/label_ailments"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_ailments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_ailments"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_allergies"
                android:layout_width="75dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:text="@string/label_allergies"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_allergies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_allergies"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="375dp"
        android:layout_height="159dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/title_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_contacto"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_contactName"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_name"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_name2"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_contactPhone"
                android:layout_width="59dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_phone"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_contactPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_contactRelationship"
                android:layout_width="63dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/label_relationship"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/field_contactRelationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_relationship"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_submitEmergency"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#009688"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
