<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_personal">

    <!-- Login -->
    <activity
        android:id="@+id/navigation_login"
        android:name="com.itesm.healthchain.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />

    <!-- Personal -->
    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.itesm.healthchain.ui.personal_data.PatientDataFragment"
        android:label="@string/title_patient_data"
        tools:layout="@layout/personal_fragment" >
    </fragment>

    <fragment
        android:id="@+id/navigation_personal_edit"
        android:name="com.itesm.healthchain.ui.personal_data.PersonalEditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/personal_edit_fragment" />

    <!-- Medical Records -->

    <fragment
        android:id="@+id/navigation_records_main"
        android:name="com.itesm.healthchain.ui.medical_records.RecordsMainFragment"
        android:label="@string/title_medical_records"
        tools:layout="@layout/main_records_fragment" >
        <action
            android:id="@+id/action_navigation_records_main_to_navigation_medical_records"
            app:destination="@id/navigation_medical_records" />
        <action
            android:id="@+id/action_navigation_records_main_to_navigation_prescriptions"
            app:destination="@id/navigation_prescriptions" />
        <action
            android:id="@+id/action_navigation_records_main_to_navigation_doctors"
            app:destination="@id/navigation_doctors" />
    </fragment>

    <fragment
        android:id="@+id/navigation_medical_records"
        android:name="com.itesm.healthchain.ui.medical_records.MedicalRecordsFragment"
        android:label="@string/title_medical_records"
        tools:layout="@layout/medical_records_fragment"/>

    <fragment
        android:id="@+id/navigation_prescriptions"
        android:name="com.itesm.healthchain.ui.medical_records.PrescriptionFragment"
        android:label="@string/label_prescriptions"
        tools:layout="@layout/prescriptions_fragment"/>

    <fragment
        android:id="@+id/navigation_doctors"
        android:name="com.itesm.healthchain.ui.medical_records.DoctorsFragment"
        android:label="@string/title_doctors"
        tools:layout="@layout/recyclerview_fragment"/>

    <!-- Settings -->

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.itesm.healthchain.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_about"
            app:destination="@id/navigation_about" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.itesm.healthchain.ui.settings.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/about_fragment"/>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.itesm.healthchain.ui.settings.AccountSettingsFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/account_settings_fragment"/>
</navigation>
