<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="4dp"
    android:paddingTop="6dp">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/prescription_name"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/prescription_dose"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/prescription_date"
        android:textAlignment="viewStart"
        android:textStyle="bold" />
</LinearLayout>